<resources>
    <string name="app_name"><i>Strength Cluster Training</i></string>
    <string name="to_login">Login</string>
    <string name="start">Comenzar</string>
    <string name="break_your_limits">¡Rompe tus límites!</string>
    <string name="forgot_password">Olvidé la contraseña</string>
    <string name="login">iniciar sesión</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_user">Usuario</string>
    <string name="or_text">ó</string>
    <string name="login_message">Inicia sesión con tu cuenta SCT</string>
    <string name="sign_in_with_google">Continuar con Google</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_back">Atrás</string>
    <string name="next">Siguiente</string>
    <string name="advanced">Avanzado</string>
    <string name="maximal_stregth">Maximal Strength</string>
    <string name="improve_endurance">Improve Endurance</string>
    <string name="beast_size">Beast Size</string>
    <string name="choose_duration">Elige la duración:</string>
    <string name="record_your_rm">Registra tus RMs:</string>
    <string name="tv_squat">Squat</string>
    <string name="tv_bench_press">Bench Press</string>
    <string name="tv_deadlift">Deadlift</string>
    <string name="tv_personal_data">Datos personales:</string>
    <string name="training_days">Días de entrenamiento:</string>
    <string name="tv_frequency">Frecuencia por movimiento:</string>
    <string name="email_already_exist">Este email ya esta siendo utilizado</string>
</resources>