<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_vertical_start_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.025"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_vertical_end_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.975"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_horizontal_start_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0125"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/main_horizontal_end_guide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9875"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot_password"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/forgot_password"
        android:textStyle="italic"
        android:textAllCaps="false"
        android:textColor="@color/color_secondary"
        app:flow_verticalAlign="center"
        android:layout_marginBottom="15dp"
        app:layout_constraintEnd_toStartOf="@id/main_vertical_end_guide"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@id/main_vertical_start_guide"
        app:layout_constraintTop_toBottomOf="@id/main_horizontal_start_guide" />

    <ir.beigirad.zigzagview.ZigzagView
        android:id="@+id/main_top_separator"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_surface"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:zigzagElevation="1dp"
        app:zigzagHeight="4dp"
        app:zigzagPaddingContent="16dp"
        app:zigzagShadowAlpha="0.9"
        app:zigzagSides="top|bottom"
        app:zigzagBackgroundColor="@color/black"
        android:layout_marginBottom="15dp"
        />

    <TextView
        android:id="@+id/tv_login_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/main_top_separator"
        app:layout_constraintStart_toEndOf="@+id/main_vertical_start_guide"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_end_guide"
        app:layout_constraintBottom_toTopOf="@+id/btn_google_login"
        android:text="@string/login_message"
        android:textColor="@color/color_on_background"
        android:textSize="42sp"
        android:textStyle="italic"
        android:layout_margin="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google_login"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:strokeColor="@color/color_on_primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        android:textColor="@color/color_on_primary"
        android:backgroundTint="@color/color_secondary_variant"
        app:layout_constraintBottom_toTopOf="@+id/or_tv"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_end_guide"
        app:layout_constraintStart_toEndOf="@+id/main_vertical_start_guide"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_message"
        android:clickable="true"
        android:focusable="true"
        app:cornerRadius="15dp"
        />

    <TextView
        android:id="@+id/or_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_text"
        android:textColor="@color/color_secondary"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@+id/input_user"
        app:layout_constraintStart_toEndOf="@+id/main_vertical_start_guide"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_end_guide"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/main_vertical_start_guide"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_end_guide"
        app:layout_constraintBottom_toTopOf="@+id/input_password"
        app:errorEnabled="true"
        android:hint="@string/hint_user"
        app:hintTextColor="@color/color_on_surface"
        app:errorTextColor="@color/color_error"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:endIconMode="clear_text"
        app:boxStrokeWidth="2.5dp"
        app:boxStrokeColor="@color/color_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_input_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:clickable="true"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/main_vertical_start_guide"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_end_guide"
        app:layout_constraintBottom_toTopOf="@+id/main_bottom_separator"
        android:hint="@string/hint_password"
        app:hintTextColor="@color/color_on_surface"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:errorEnabled="true"
        app:errorTextColor="@color/color_error"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:endIconMode="password_toggle"
        app:boxStrokeColor="@color/color_secondary"
        app:boxStrokeWidth="2.5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/main_input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:clickable="true"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ir.beigirad.zigzagview.ZigzagView
        android:id="@+id/main_bottom_separator"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/color_surface"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:zigzagElevation="1dp"
        app:zigzagHeight="4dp"
        app:zigzagPaddingContent="16dp"
        app:zigzagShadowAlpha="0.9"
        app:zigzagSides="top|bottom"
        app:zigzagBackgroundColor="@color/black"
        android:layout_marginBottom="15dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/main_horizontal_end_guide"
        app:layout_constraintStart_toEndOf="@+id/main_vertical_start_guide"
        app:layout_constraintEnd_toStartOf="@+id/main_vertical_end_guide"
        android:backgroundTint="@color/color_secondary"
        android:text="@string/login"
        app:cornerRadius="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        android:focusable="true"
        app:icon="@drawable/ic_baseline_login_24"
        />

</androidx.constraintlayout.widget.ConstraintLayout>